--- a/res/xml/status_bar_clock_style.xml
+++ b/res/xml/status_bar_clock_style.xml
@@ -18,7 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/status_bar_clock">
 
-       <CheckBoxPreference
+       <SwitchPreference
             android:key="status_bar_show_clock"
             android:title="@string/status_bar_show_clock_title"
             android:defaultValue="true" />
@@ -27,6 +27,13 @@
             android:key="clock_color"
             android:title="@string/clock_color_title"
             android:defaultValue="0xffffff"
+            android:dependency="status_bar_show_clock" />
+
+         <ListPreference
+            android:key="font_style"
+            android:entries="@array/clock_font_style_entries"
+            android:entryValues="@array/clock_font_style_values"
+            android:title="@string/clock_font_style_title"
             android:dependency="status_bar_show_clock" />
 
         <ListPreference
