--- a/res/layout/ownerinfo.xml
+++ b/res/layout/ownerinfo.xml
@@ -17,8 +17,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:scrollbars="vertical"
-    android:background="@android:color/white">
+    android:scrollbars="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -46,8 +45,7 @@
                 android:layout_marginTop="8dip"
                 android:gravity="top"
                 android:hint="@string/user_nickname"
-                android:inputType="textCapWords"
-            />
+                android:inputType="textCapWords" />
 
             <CheckBox android:id="@+id/show_owner_info_on_lockscreen_checkbox"
                 android:layout_width="match_parent"
@@ -56,14 +54,12 @@
                 android:layout_marginTop="8dip"
                 android:text="@string/show_owner_info_on_lockscreen_label"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="?android:attr/textColorSecondary"
-            />
+                android:textColor="?android:attr/textColorSecondary" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dip"
-                android:background="#ff404040"
-                />
+                android:background="#ff404040" />
 
             <EditText android:id="@+id/owner_info_edit_text"
                 android:layout_width="match_parent"
@@ -74,8 +70,7 @@
                 android:hint="@string/owner_info_settings_edit_text_hint"
                 android:lines="8"
                 android:maxLines="8"
-                android:inputType="textMultiLine|textCapSentences"
-            />
+                android:inputType="textMultiLine|textCapSentences" />
 
         </LinearLayout>
 
