--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -332,6 +332,8 @@
     <string name="clock_font_light">Light</string>
     <string name="clock_font_light_italic">Light italic</string>
     <string name="clock_font_normal">Normal</string>
+    <string name="clock_use_second">Use second clock</string>
+    <string name="clock_use_second_summary">Show second in clock</string>
 
     <!-- Toggle camera shutter sound -->
     <string name="camera_sounds_title">Camera shutter sound</string>
