--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1192,4 +1192,8 @@
     <string name="color_normal_title">Normal</string>
     <string name="color_fully_title">Fully connected</string>
 
+    <!-- Superuser indicator on status bar -->
+    <string name="su_indicator">Superuser indicator</string>
+    <string name="su_indicator_summary">Show superuser indicator on status bar when a session is active</string>
+
 </resources>
