--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -42,6 +42,12 @@
                 android:summary="@string/status_bar_toggle_brightness_summary"
                 android:defaultValue="false" />
 
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+                android:key="show_su_indicator"
+                android:title="@string/su_indicator"
+                android:summary="@string/su_indicator_summary"
+                android:defaultValue="true" />
+
         <PreferenceScreen
                 android:key="status_bar_signal_settings"
                 android:title="@string/status_bar_signal_settings_title"
