--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -30,6 +30,11 @@
         android:defaultValue="true" />
 
     <SwitchPreference
+        android:key="power_menu_screenrecord"
+        android:title="@string/power_menu_screenrecord_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="screenshot"
         android:title="@string/power_menu_screenshot_title"
         android:defaultValue="false" />
