--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -589,6 +589,8 @@
     <string name="recents_clear_all_location_bottom_right">Bottom right</string>
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
+    <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
+    <string name="recents_clear_all_dismiss_all_summary">Choose whether to dismiss all tasks or ignore the foreground task</string>
 
     <!-- App Circle Sidebar -->
     <string name="app_circle_bar_title">App sidebar</string>
