--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -35,10 +35,9 @@
     <string name="reset_option_message">Reset values to\nAndroid- or Fusion default?</string>
 
     <!-- Color Picker -->
-    <string name="dialog_color_picker">Color Picker</string>
-    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="dialog_color_picker">Color picker</string>
+    <string name="press_color_to_apply">Press on color at right to apply</string>
     <string name="arrow_right">→</string>
-    <string name="arrow_down">↓</string>
     <string name="hex">Hex:</string>
     <string name="hex_hint">#ff000000</string>
     <string name="set">Set</string>
