--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -17,6 +17,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/navigation_pref_title">
 
+        <!-- Pie control -->
+        <PreferenceScreen
+            android:key="pie_settings"
+            android:fragment="com.android.settings.fusion.PieControl"
+            android:title="@string/pie_control_title" />
+
     <PreferenceCategory
         android:key="navigation_bar_enable"
         android:title="@string/navigation_bar_category">
