--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1311,4 +1311,8 @@
     <string name="omniswitch_settings_title">OmniSwitch</string>
     <string name="omniswitch_settings_summary">OmniSwitch recents settings</string>
 
+    <!-- QuickSettings brightness slider -->
+    <string name="qs_brightness_slider_title">Show brightness slider</string>
+    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
+
 </resources>
