--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1330,4 +1330,7 @@
     <string name="dialer_widget_hide">Disable lockscreen dialer</string>
     <string name="dialer_widget_hide_summary">Allows you to disable swipe to open dialer in lockscreen.\nSystem will softreboot.</string>
 
+    <!-- Default alarm ringtone -->
+    <string name="alarm_ringtone_title">Default alarm ringtone</string>
+
 </resources>
