--- a/res/xml/fusion_interface_settings.xml
+++ b/res/xml/fusion_interface_settings.xml
@@ -61,6 +61,11 @@
             android:summary="@string/recents_show_searchbar_summary"
             android:defaultValue="false" />
 
+        <PreferenceScreen
+            android:id="@+id/omniswitch"
+            android:title="@string/omniswitch_settings_title"
+            android:fragment="com.android.settings.fusion.OmniSwitch" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
