--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1326,4 +1326,8 @@
     <string name="camera_widget_hide">Disable lockscreen camera</string>
     <string name="camera_widget_hide_summary">Allows you to disable swipe to open camera in lockscreen.</string>
 
+    <!-- Dialer lockscreen swipe -->
+    <string name="dialer_widget_hide">Disable lockscreen dialer</string>
+    <string name="dialer_widget_hide_summary">Allows you to disable swipe to open dialer in lockscreen.\nSystemUI will restart.</string>
+
 </resources>
