--- a/res/xml/fusion_interface_settings.xml
+++ b/res/xml/fusion_interface_settings.xml
@@ -73,10 +73,16 @@
         android:title="@string/lockscreen_category" >
 
         <!-- Disable camera swipe -->
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        <SwitchPreference
             android:key="camera_widget_hide"
             android:title="@string/camera_widget_hide"
             android:summary="@string/camera_widget_hide_summary" />
+
+        <!-- Disable dialer swipe -->
+        <SwitchPreference
+            android:key="dialer_widget_hide"
+            android:title="@string/dialer_widget_hide"
+            android:summary="@string/dialer_widget_hide_summary" />
 
     </PreferenceCategory>
 
