--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -62,6 +62,7 @@
     <!-- Fusion Status bar -->
     <string name="status_bar_title">Status bar</string>
     <string name="battery_style_title">Battery style</string>
+    <string name="battery_bar_settings">Battery Bar Options</string>
     <string name="status_bar_advanced_title">Advanced options</string>
     <string name="battery_style_reset_message">Reset battery bar color?</string>
     <!-- Fusion Advanced -->
@@ -991,20 +992,32 @@
     <!-- Disable volume adjust sound -->
     <string name="volume_adjust_sound_title">Volume adjust sound</string>
 
-    <!-- Status bar - Battery -->
-    <string name="status_bar_battery_style_title">Battery status style</string>
-    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
-    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
-    <string name="status_bar_battery_style_circle">Circle</string>
-    <string name="status_bar_battery_style_text">Text</string>
-    <string name="status_bar_battery_style_hidden">Hidden</string>
-
-    <!-- Status bar - Battery percentage -->
-    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
-    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
-    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
-    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
-    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+    <!-- Status bar battery status settings -->
+    <string name="status_bar_battery_status_settings_title">Battery status</string>
+    <string name="status_bar_battery_status_settings_summary">Customize the battery status</string>
+    <string name="battery_status_cat_circle_options_title">Customize the circle</string>
+    <string name="battery_status_style_title">Indicator</string>
+    <string name="battery_status_style_icon_portrait">Icon portrait</string>
+    <string name="battery_status_style_icon_landscape">Icon landscape</string>
+    <string name="battery_status_style_circle">Circle</string>
+    <string name="battery_status_style_text">Text</string>
+    <string name="battery_status_style_hidden">Hidden</string>
+    <string name="battery_status_percent_style_title">Percentage text position</string>
+    <string name="battery_status_percent_style_dialog_title">Choose a position</string>
+    <string name="battery_status_percent_style_text_inside">Inside the icon</string>
+    <string name="battery_status_percent_style_text_next">Next to the icon</string>
+    <string name="battery_status_percent_style_default">Hidden (default)</string>
+    <string name="battery_status_charge_animation_speed_title">Charging animation speed</string>
+    <string name="battery_status_charge_animation_speed_none">Disabled</string>
+    <string name="battery_status_charge_animation_speed_slow">Slow</string>
+    <string name="battery_status_charge_animation_speed_normal">Normal</string>
+    <string name="battery_status_charge_animation_speed_fast">Fast</string>
+    <string name="battery_status_show_circle_dotted_title">Circle dotted</string>
+    <string name="battery_status_show_circle_dotted_summary">Activate to show the circle dotted</string>
+    <string name="battery_status_circle_dot_length_title">Circle dot length</string>
+    <string name="battery_status_circle_dot_interval_title">Circle dot interval</string>
+    <string name="battery_status_battery_color_title">Fill</string>
+    <string name="battery_status_text_color_title">Text</string>
 
     <!-- Battery Bar -->
     <string name="status_bar_battery_cat_title">Battery</string>
