--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -16,9 +16,15 @@
                 android:title="@string/network_traffic_title" />
 
         <PreferenceScreen
+                android:key="status_bar_battery_status_settings"
+                android:title="@string/status_bar_battery_status_settings_title"
+                android:summary="@string/status_bar_battery_status_settings_summary"
+                android:fragment="com.android.settings.fusion.StatusBarBatteryStatusSettings" />
+
+        <PreferenceScreen
                 android:key="battery_style_pref"
-                android:fragment="com.android.settings.fusion.StatusBarBatteryStyle"
-                android:title="@string/battery_style_title" />
+                android:fragment="com.android.settings.fusion.StatusBarBatteryBarSettings"
+                android:title="@string/battery_bar_settings" />
 
     </PreferenceCategory>
 
